--- a/ncbi.html
+++ b/ncbi.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Quality control</title>
+  <title>sRNA data cleaning</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 </head>
 <body>
   <script type="text/javascript" src="js/menu.js"></script>
+  <script type="text/javascript" src="js/functions.js"></script>
+
   <script>
 
   </script>
@@ -26,7 +28,17 @@
 <!-- Use any element to open the sidenav -->
   <span onclick="openNav()">Menu</span>
   <div id="main">
-
+    <div class="container" id="container">
+	  <textarea id="inputtext">Select folder</textarea>
+	  <label>Sequences of the adaptor</label><br>
+	  <input type="text" id="adaptor" name="adaptor" placeholder="">
+	  <br>
+	  <label>Minimum length of sRNAs after trimming</label><br>
+	  <input type="text" id="length" name="length" placeholder="">
+	  <br><br>
+	  <input type="submit" value="Run" onclick="trimming()">
+	  <textarea id="outputtext"></textarea>
+	</div>
   </div>
 
 </body>
