--- a/ncbi.html
+++ b/ncbi.html
@@ -23,7 +23,7 @@
 
     var exec = require('child_process').exec;
     var runperl = path.join("perlfiles","tmp_db.bat");
-    var commrun = "perl " + path.join(process.cwd(),'VD','get_version.pl ');
+    var commrun = "perl " + path.join(process.cwd(),'VD','bin','get_version.pl ');
 
     create_analysisbat(runperl, commrun);
 
