--- a/ncbi.html
+++ b/ncbi.html
@@ -3,11 +3,22 @@
 <head>
   <title>NCBI database update</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-      <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/spinner.css">
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/adds.js"></script>
+    <div id="ballsWaveG" class="overlay">
+       <div id="ballsWaveG_1" class="ballsWaveG"></div>
+       <div id="ballsWaveG_2" class="ballsWaveG"></div>
+       <div id="ballsWaveG_3" class="ballsWaveG"></div>
+       <div id="ballsWaveG_4" class="ballsWaveG"></div>
+       <div id="ballsWaveG_5" class="ballsWaveG"></div>
+       <div id="ballsWaveG_6" class="ballsWaveG"></div>
+       <div id="ballsWaveG_7" class="ballsWaveG"></div>
+       <div id="ballsWaveG_8" class="ballsWaveG"></div>
+    </div>
 </head>
 <body>
   <script>
@@ -21,6 +32,7 @@
       return extName.test(element); 
     };
 
+    const path = require('path');
     var exec = require('child_process').exec;
     var runperl = path.join("perlfiles","tmp_db.bat");
     var commrun = "perl " + path.join(process.cwd(),'VD','bin','get_version.pl ');
@@ -30,7 +42,7 @@
     exec(runperl, function(error,stdout,stderr){
         if(error!=null){
           console.log('error :', error);
-          alert('Something went wrong readying external database version.' + error);
+          alert('Something went wrong readying external database version. ' + error);
         } else{
           document.getElementById("version").value = stdout;
           console.log("output:" + stdout);
@@ -39,10 +51,11 @@
 
     var fs = require('fs');
 
-    fs.readdir("VD/databases", function(err, items) {
-      //console.log(items);
+    fs.readdir(path.join(process.cwd(),"VD","databases"), function(err, items) {
+      console.log(items);
         items.filter(extension_vrl).forEach(function(value) {
           console.log(value);
+          document.getElementById("currentv").value += value + "\n";
         });
     });
 
@@ -55,7 +68,7 @@
   <div id="main">
     <div class="container" id="container">
 	  <label>Current local NCBI Database version</label><br>
-    <input type="text" id="percent" name="percent" placeholder="">
+    <textarea type="text" id="currentv" name="currentv" placeholder=""></textarea>
     <br><br>
     <label>Update to NCBI Database version</label><br>
 	  <input type="text" id="version" name="version" placeholder="">
@@ -65,7 +78,7 @@
               <option value=""></option>
               <option value="plant">Plant</option>
             </select><br>
-    <label>Select redundancy levele</label><br>
+    <label>Select redundancy level</label><br>
             <select  class="form-control" id="filtering" name="filtering">
               <option value=""></option>
               <option value="U95">U95</option>
