--- a/ncbi.html
+++ b/ncbi.html
@@ -51,7 +51,7 @@
 
   <div id="Menu"></div>
 <!-- Use any element to open the sidenav -->
-  <span onclick="openNav()">Menu</span>
+  <span onclick="openNav()" style="color: chartreuse;background-color: black;"><B>&nbsp;&#9776;&nbsp;Menu&nbsp;&nbsp;</B> </span>
   <h3 align="center">Download/Update NCBI database</h3>
   <div id="main">     
     <div class="container" id="container">
